@@ -32,4 +32,4 @@ Imports:
     stringr (>= 1.4.1)
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.2.1
+RoxygenNote: 7.2.3
