@@ -5,6 +5,8 @@ export(api.get)
 export(api.post)
 export(api.setup)
 export(api.status)
+export(get_all_measurements)
+export(get_all_units)
 export(get_building_info)
 export(get_buildings)
 export(get_deployments)
