@@ -4,10 +4,12 @@
 \alias{api.setup}
 \title{Set up Onboard API keys and URL in system environment}
 \usage{
-api.setup(api_type = "prod", verbose = TRUE)
+api.setup(api_type = "prod", api_key = NULL, verbose = TRUE)
 }
 \arguments{
 \item{api_type}{Provide the API client name.}
+
+\item{api_key}{Option to include your API keys in the argument. It is NULL by default}
 
 \item{verbose}{Logical. If TRUE, prints the API status.}
 }
